--- a/wheatley_api/requirements.txt
+++ b/wheatley_api/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==20.1.0
 importlib-metadata==4.8.2
 Markdown==3.3.6
 psycopg2-binary==2.9.2
+python-dotenv==0.19.2
 pytz==2021.3
 sqlparse==0.4.2
 zipp==3.6.0
